# RustBegin

rust-test/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
rust-test/.github/: PULL_REQUEST_TEMPLATE.md
rust-test/.github/ISSUE_TEMPLATE/: bug_report.md
rust-test/ControlFlow/: main.rs
rust-test/Operators/: main.rs
rust-test/functions/: main.rs
rust-test/helloworld/: main.rs
rust-test/shadowing/: main.rs
rust-test/src/: main.rs
