[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"
description = "Test code for Rust"
repository = "https://github.com/akshayMahajan/rust-test"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
